[Projects] Added more! 👹

--- a/content/projects/happy-halloween/index.mdx
+++ b/content/projects/happy-halloween/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Happy Halloween"
-shortTitle: "Happy Halloween"
+title: "Happy Halloween!"
+shortTitle: "Happy Halloween!"
 category: "Charcoal on Paper"
 color: "black"
 cover: "./projects-happy-halloween-001.jpg"
