--- a/content/projects/slow-dancing-in-the-dark/index.mdx
+++ b/content/projects/slow-dancing-in-the-dark/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Slow Dancing in the Dark"
-shortTitle: "Slow Dancing"
+shortTitle: "Slow Dancing in..."
 category: "Digital"
 color: "white"
 cover: "./projects-slow-dancing-in-the-dark-001.png"
