--- a/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
+++ b/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "What I Think About When I Think About Running"
-shortTitle: "Running"
+shortTitle: "What I Think About..."
 category: "Silkscreen Print"
 color: "white"
 cover: "./projects-what-i-think-about-when-i-think-about-running-001.png"
