--- a/content/projects/model-study-nov-3-2022/index.mdx
+++ b/content/projects/model-study-nov-3-2022/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Model Study November 3rd, 2022"
-shortTitle: "Model Study"
+shortTitle: "Model Study Nov..."
 category: "Acrylic on Canvas"
 color: "white"
 cover: "./projects-model-study-nov-3-2022-001.jpg"
