[Markdown] Added image support to markdown and some contact links 😁

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,18 +1,12 @@
 ---
 title: "About"
 slug: "/about"
-cover: "./about-us-cover-image.jpg"
+cover: "./about-cover-image.jpg"
 ---
 
 # About
 
-| Number | Title                                    | Year |
-| ------ | ---------------------------------------- | ---: |
-| 1      | Harry Potter and the Philosopher’s Stone | 2001 |
-| 2      | Harry Potter and the Chamber of Secrets  | 2002 |
-| 3      | Harry Potter and the Prisoner of Azkaban | 2004 |
-
-[View raw (TEST.md)](https://raw.github.com/adamschwartz/github-markdown-kitchen-sink/master/README.md)
+![Blaz Pocrnja](./about-cover-image.jpg)
 
 This is a paragraph.
 
