[Pages] Added about me section 😏

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -6,199 +6,16 @@ cover: "./about-cover-image.jpg"
 
 # About
 
+<br />
+
 ![Blaz Pocrnja](./about-cover-image.jpg)
 
-This is a paragraph.
+<br />
+My name is Blaž Pocrnja, I am a Croatian-Canadian artist and aspiring animator living
+in Vancouver, Canada. I am currently studying Fine Arts at Langara College.
 
-    This is a paragraph.
+Prior to the COVID pandemic, I studied and worked as a software developer earning my bachelors in Computer Science. However, like many during the pandemic, I was forced to reevaluate my life path, to rediscover what brought me meaning and joy. That was when I decided to pursue art and animation, to affirm my inner child’s need for creative expression, a need that had been ignored through the pressures of adolescence.
 
-# Header 1
+My practice is largely influenced by Dharmic and Japanese thought. You’ll find various references to Buddhism, ukiyo-e, Japanese literature, and of course anime and manga in my work. I’m inspired by the likes of Akira Toryama, Hayao Miyazaki, Hideaki Anno, Yusuke Murata, Toshio Saeki, and Haruki Murakami – just to name a few!
 
-## Header 2
-
-    Header 1
-    ========
-
-    Header 2
-    --------
-
-# Header 1
-
-## Header 2
-
-### Header 3
-
-#### Header 4
-
-##### Header 5
-
-###### Header 6
-
-    # Header 1
-    ## Header 2
-    ### Header 3
-    #### Header 4
-    ##### Header 5
-    ###### Header 6
-
-# Header 1
-
-## Header 2
-
-### Header 3
-
-#### Header 4
-
-##### Header 5
-
-###### Header 6
-
-    # Header 1 #
-    ## Header 2 ##
-    ### Header 3 ###
-    #### Header 4 ####
-    ##### Header 5 #####
-    ###### Header 6 ######
-
-> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
-
-    > Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
-
-> ## This is a header.
->
-> 1. This is the first list item.
-> 2. This is the second list item.
->
-> Here's some example code:
->
->     Markdown.generate();
-
-    > ## This is a header.
-    > 1. This is the first list item.
-    > 2. This is the second list item.
-    >
-    > Here's some example code:
-    >
-    >     Markdown.generate();
-
-- Red
-- Green
-- Blue
-
-* Red
-* Green
-* Blue
-
-- Red
-- Green
-- Blue
-
-```markdown
-- Red
-- Green
-- Blue
-
-* Red
-* Green
-* Blue
-
-- Red
-- Green
-- Blue
-```
-
-- `code goes` here in this line
-- **bold** goes here
-
-```markdown
-- `code goes` here in this line
-- **bold** goes here
-```
-
-1. Buy flour and salt
-1. Mix together with water
-1. Bake
-
-```markdown
-1. Buy flour and salt
-1. Mix together with water
-1. Bake
-```
-
-1. `code goes` here in this line
-1. **bold** goes here
-
-```markdown
-1. `code goes` here in this line
-1. **bold** goes here
-```
-
-Paragraph:
-
-    Code
-
-    Paragraph:
-
-        Code
-
----
-
----
-
----
-
----
-
----
-
-    * * *
-
-    ***
-
-    *****
-
-    - - -
-
-    ---------------------------------------
-
-This is [an example](http://example.com "Example") link.
-
-[This link](http://example.com) has no title attr.
-
-This is [an example][id] reference-style link.
-
-[id]: http://example.com "Optional Title"
-
-    This is [an example](http://example.com "Example") link.
-
-    [This link](http://example.com) has no title attr.
-
-    This is [an example] [id] reference-style link.
-
-    [id]: http://example.com "Optional Title"
-
-_single asterisks_
-
-_single underscores_
-
-**double asterisks**
-
-**double underscores**
-
-    *single asterisks*
-
-    _single underscores_
-
-    **double asterisks**
-
-    __double underscores__
-
-This paragraph has some `code` in it.
-
-    This paragraph has some `code` in it.
-
-![Alt Text](https://placehold.it/200x50 "Image Title")
-
-    ![Alt Text](https://placehold.it/200x50 "Image Title")
-
-![Alt Text](https://placehold.it/1600x900 "Image Title")
+I prefer to approach each new work through the _Deleuzian_ forces that arise spontaneously in my subconscious. Whether it be an image that flashes in my mind, an embodied feeling in the act of creation, a recurring motif that appears in my life time-and-time again, my aim remains simply to create a compelling image that can capture in the moment the complex ebb and flow of these forces. It is a joy afterwards to dissect my own work, to find themes and patterns that emerge in the light of my conscious mind through the act of creation.
