[Projects] Added colors to all projects 🐡

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -2,6 +2,7 @@
 title: "About"
 slug: "/about"
 cover: "./about-cover-image.jpg"
+color: "#F2F1DF"
 ---
 
 # About
@@ -11,7 +12,7 @@ cover: "./about-cover-image.jpg"
 ![Blaz Pocrnja](./about-cover-image.jpg)
 
 <br />
-My name is Blaž Pocrnja, I am a Croatian-Canadian artist and aspiring animator living
+My name is Blaz Pocrnja, I am a Croatian-Canadian artist and aspiring animator living
 in Vancouver, Canada. I am currently studying Fine Arts at Langara College.
 
 Prior to the COVID pandemic, I studied and worked as a software developer earning my bachelors in Computer Science. However, like many during the pandemic, I was forced to reevaluate my life path, to rediscover what brought me meaning and joy. That was when I decided to pursue art and animation, to affirm my inner child’s need for creative expression, a need that had been ignored through the pressures of adolescence.
