--- a/content/projects/body-extension-eva/index.mdx
+++ b/content/projects/body-extension-eva/index.mdx
@@ -2,7 +2,7 @@
 title: "Body Extension E.V.A"
 shortTitle: "Body Extension..."
 category: "Digital"
-color: "white"
+color: "#9BF2D2"
 cover: "./projects-body-extension-eva-001.png"
 date: "2022-03-16"
 ---
