--- a/content/projects/brainstorm/index.mdx
+++ b/content/projects/brainstorm/index.mdx
@@ -2,7 +2,7 @@
 title: "Brainstorm"
 shortTitle: "Brainstorm"
 category: "Acrylic Ink on Paper Collage"
-color: "white"
+color: "#A6122D"
 cover: "./projects-brainstorm-001.jpg"
 date: "2022-11-30"
 ---
