--- a/content/projects/burst/index.mdx
+++ b/content/projects/burst/index.mdx
@@ -2,7 +2,7 @@
 title: "Burst"
 shortTitle: "Burst"
 category: "Digital"
-color: "white"
+color: "#0D0D0D"
 cover: "./projects-burst-001.png"
 date: "2022-03-11"
 ---
