--- a/content/projects/devour/index.mdx
+++ b/content/projects/devour/index.mdx
@@ -2,7 +2,7 @@
 title: "Devour"
 shortTitle: "Devour"
 category: "Chalk Pastel Series"
-color: "white"
+color: "#8C5A67"
 cover: "./projects-devour-003.jpg"
 date: "2022-11-16"
 ---
