--- a/content/projects/fly-me-to-the-moon/index.mdx
+++ b/content/projects/fly-me-to-the-moon/index.mdx
@@ -2,7 +2,7 @@
 title: "Fly Me to the Moon"
 shortTitle: "Fly Me to the Moon"
 category: "Graphite on Paper"
-color: "white"
+color: "#0D0000"
 cover: "./projects-fly-me-to-the-moon-001.jpg"
 date: "2022-10-06"
 ---
