--- a/content/projects/flying-nimbus/index.mdx
+++ b/content/projects/flying-nimbus/index.mdx
@@ -2,7 +2,7 @@
 title: "Flying Nimbus"
 shortTitle: "Flying Nimbus"
 category: "Charcoal on Paper"
-color: "white"
+color: "#0D0000"
 cover: "./projects-flying-nimbus-001.jpg"
 date: "2021-11-09"
 ---
