--- a/content/projects/happy-halloween/index.mdx
+++ b/content/projects/happy-halloween/index.mdx
@@ -2,7 +2,7 @@
 title: "Happy Halloween!"
 shortTitle: "Happy Halloween!"
 category: "Charcoal on Paper"
-color: "black"
+color: "#0D0C0A"
 cover: "./projects-happy-halloween-001.jpg"
 date: "2021-10-31"
 ---
