--- a/content/projects/impermanence/index.mdx
+++ b/content/projects/impermanence/index.mdx
@@ -2,7 +2,7 @@
 title: "Impermanence"
 shortTitle: "Impermanence"
 category: "Digital"
-color: "white"
+color: "#0D0D0D"
 cover: "./projects-impermanence-001.png"
 date: "2022-03-25"
 ---
