--- a/content/projects/legends/index.mdx
+++ b/content/projects/legends/index.mdx
@@ -2,7 +2,7 @@
 title: "Legends"
 shortTitle: "Legends"
 category: "Acrylic on Canvas Series"
-color: "white"
+color: "#0D0000"
 cover: "./projects-legends-001.jpg"
 date: "2021-11-28"
 ---
