--- a/content/projects/model-study-nov-3-2022/index.mdx
+++ b/content/projects/model-study-nov-3-2022/index.mdx
@@ -2,7 +2,7 @@
 title: "Model Study November 3rd, 2022"
 shortTitle: "Model Study Nov..."
 category: "Acrylic on Canvas"
-color: "white"
+color: "#F2E3D5"
 cover: "./projects-model-study-nov-3-2022-001.jpg"
 date: "2022-11-03"
 ---
