--- a/content/projects/morning-brown/index.mdx
+++ b/content/projects/morning-brown/index.mdx
@@ -2,7 +2,7 @@
 title: "Morning Brown"
 shortTitle: "Morning Brown"
 category: "Acrylic on Canvas"
-color: "white"
+color: "#E8C486"
 cover: "./projects-morning-brown-001.jpg"
 date: "2022-10-25"
 ---
