--- a/content/projects/muse/index.mdx
+++ b/content/projects/muse/index.mdx
@@ -2,7 +2,7 @@
 title: "Muse"
 shortTitle: "Muse"
 category: "Chalk Pastel Series"
-color: "white"
+color: "#A6523F"
 cover: "./projects-muse-002.jpg"
 date: "2021-11-27"
 ---
