--- a/content/projects/night-market/index.mdx
+++ b/content/projects/night-market/index.mdx
@@ -2,7 +2,7 @@
 title: "Night Market"
 shortTitle: "Night Market"
 category: "Acrylic, Charcoal, and Ink on Canvas"
-color: "black"
+color: "#0B0B0D"
 cover: "./projects-night-market-001.jpg"
 date: "2022-11-28"
 ---
