--- a/content/projects/pow/index.mdx
+++ b/content/projects/pow/index.mdx
@@ -2,7 +2,7 @@
 title: "Pow!"
 shortTitle: "Pow!"
 category: "Acrylic Ink on Watercolor Paper"
-color: "white"
+color: "#0D0807"
 cover: "./projects-pow-001.jpg"
 date: "2022-04-02"
 ---
