--- a/content/projects/slow-dancing-in-the-dark/index.mdx
+++ b/content/projects/slow-dancing-in-the-dark/index.mdx
@@ -2,7 +2,7 @@
 title: "Slow Dancing in the Dark"
 shortTitle: "Slow Dancing in..."
 category: "Digital"
-color: "white"
+color: "#732634"
 cover: "./projects-slow-dancing-in-the-dark-001.png"
 date: "2021-12-17"
 ---
