--- a/content/projects/the-zen-stone/index.mdx
+++ b/content/projects/the-zen-stone/index.mdx
@@ -2,7 +2,7 @@
 title: "The Zen Stone"
 shortTitle: "The Zen Stone"
 category: "Digital"
-color: "white"
+color: "#5A5B73"
 cover: "./projects-the-zen-stone-001.png"
 date: "2022-04-14"
 ---
