--- a/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
+++ b/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
@@ -2,7 +2,7 @@
 title: "What I Think About When I Think About Running"
 shortTitle: "What I Think About..."
 category: "Silkscreen Print"
-color: "white"
+color: "#332740"
 cover: "./projects-what-i-think-about-when-i-think-about-running-001.png"
 date: "2022-11-14"
 ---
