--- a/content/projects/year-of-the-tiger/index.mdx
+++ b/content/projects/year-of-the-tiger/index.mdx
@@ -2,7 +2,7 @@
 title: "Year of the Tiger"
 shortTitle: "Year of the Tiger"
 category: "Chalk Pastel on Paper"
-color: "white"
+color: "#8C4227"
 cover: "./projects-year-of-the-tiger-001.jpg"
 date: "2022-01-30"
 ---
