--- a/content/projects/disintegration/index.mdx
+++ b/content/projects/disintegration/index.mdx
@@ -2,7 +2,7 @@
 title: "[dis] integration"
 shortTitle: "[dis] integration"
 category: "Silkscreen Print"
-color: "#90BDDF"
+color: "#591E2E"
 cover: "./projects-disintegration-001.jpg"
 date: "2022-12-09"
 ---
