[Projects] Added descriptions to each piece 😁

--- a/content/projects/body-extension-eva/index.mdx
+++ b/content/projects/body-extension-eva/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-body-extension-eva-001.png"
 date: "2022-03-16"
 ---
 
-The first meal of the day
+For when my back inevitably gives way to years of sitting at my computer.
