--- a/content/projects/fly-me-to-the-moon/index.mdx
+++ b/content/projects/fly-me-to-the-moon/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-fly-me-to-the-moon-001.jpg"
 date: "2022-10-06"
 ---
 
-The first meal of the day
+I should _**really**_ watch _Ghost in the Shell_.
