--- a/content/projects/happy-halloween/index.mdx
+++ b/content/projects/happy-halloween/index.mdx
@@ -7,4 +7,6 @@ cover: "./projects-happy-halloween-001.jpg"
 date: "2021-10-31"
 ---
 
-The first meal of the day
+Overcoming my fear of The Exorcist...by drawing it at enormous scale.
+
+Sorry for the jump scare.
