--- a/content/projects/model-study-nov-3-2022/index.mdx
+++ b/content/projects/model-study-nov-3-2022/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-model-study-nov-3-2022-001.jpg"
 date: "2022-11-03"
 ---
 
-The first meal of the day
+A study in skin tones, specifically cool neutrals in the shadows.
