--- a/content/projects/night-market/index.mdx
+++ b/content/projects/night-market/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-night-market-001.jpg"
 date: "2022-11-28"
 ---
 
-The first meal of the day
+Inspired by a night out in Hanoi's night market, here we see two older women examining the cultural products of a younger and evergrowing distant generation.
