--- a/content/projects/pow/index.mdx
+++ b/content/projects/pow/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Pow!"
-shortTitle: "Pow!"
+title: "POW!"
+shortTitle: "POW!"
 category: "Acrylic Ink on Watercolor Paper"
 color: "#0D0807"
 cover: "./projects-pow-001.jpg"
 date: "2022-04-02"
 ---
 
-The first meal of the day
+Accurate portryal of me when I step into a boxing ring.
