--- a/content/projects/the-zen-stone/index.mdx
+++ b/content/projects/the-zen-stone/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-the-zen-stone-001.png"
 date: "2022-04-14"
 ---
 
-The first meal of the day
+Something needed to be done to address the gamers.
