--- a/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
+++ b/content/projects/what-i-think-about-when-i-think-about-running/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-what-i-think-about-when-i-think-about-running-001.png"
 date: "2022-11-14"
 ---
 
-The first meal of the day
+Extremely pale man goes for a light jog.
