--- a/content/projects/devour/index.mdx
+++ b/content/projects/devour/index.mdx
@@ -7,8 +7,4 @@ cover: "./projects-devour-003.jpg"
 date: "2022-11-16"
 ---
 
-Color (American English), or colour (Commonwealth English), is the characteristic of human visual perception described through color categories, with names such as red, orange, yellow, green, blue, or purple.
-
-This perception of color derives from the stimulation of cone cells in the human eye by electromagnetic radiation in the visible spectrum. Color categories and physical specifications of color are associated with objects through the wavelength of the light that is reflected from them. This reflection is governed by the object's physical properties such as light absorption, emission spectra, etc.
-
-Very colorful.
+This is just me absolutely crushing a box of Chicko Chicken (not sponsored).
