--- a/content/projects/disintegration/index.mdx
+++ b/content/projects/disintegration/index.mdx
@@ -7,6 +7,4 @@ cover: "./projects-disintegration-001.jpg"
 date: "2022-12-09"
 ---
 
-Neon gives a distinct reddish-orange glow when used in low-voltage neon glow lamps, high-voltage discharge tubes and neon advertising signs. The red emission line from neon also causes the well known red light of helium–neon lasers. Neon is used in some plasma tube and refrigerant applications but has few other commercial uses.
-
-It is commercially extracted by the fractional distillation of liquid air. Since air is the only source, it is considerably more expensive than helium.
+The continual replication and dissolution of the self is the process we call life. We are simultaneously becoming and disintegrating.
