--- a/content/projects/flying-nimbus/index.mdx
+++ b/content/projects/flying-nimbus/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-flying-nimbus-001.jpg"
 date: "2021-11-09"
 ---
 
-The first meal of the day
+Just because this is art school doesn't mean I can't draw anime fanart right?!
