--- a/content/projects/impermanence/index.mdx
+++ b/content/projects/impermanence/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-impermanence-001.png"
 date: "2022-03-25"
 ---
 
-The first meal of the day
+I like to draw people screaming alot...hmm I should self-evaluate.
