--- a/content/projects/legends/index.mdx
+++ b/content/projects/legends/index.mdx
@@ -7,8 +7,6 @@ cover: "./projects-legends-001.jpg"
 date: "2021-11-28"
 ---
 
-Color (American English), or colour (Commonwealth English), is the characteristic of human visual perception described through color categories, with names such as red, orange, yellow, green, blue, or purple.
+Akira Toryama, Hayao Miyazaki, and Hideaki Anno. Creating the creators of my favorite works.
 
-This perception of color derives from the stimulation of cone cells in the human eye by electromagnetic radiation in the visible spectrum. Color categories and physical specifications of color are associated with objects through the wavelength of the light that is reflected from them. This reflection is governed by the object's physical properties such as light absorption, emission spectra, etc.
-
-Very colorful.
+Barthes would have a field day with this one.
