--- a/content/projects/morning-brown/index.mdx
+++ b/content/projects/morning-brown/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-morning-brown-001.jpg"
 date: "2022-10-25"
 ---
 
-The first meal of the day
+Don't even look at me until I've had my morning coffee.
