[Projects] Some description changes! 😦

--- a/content/projects/impermanence/index.mdx
+++ b/content/projects/impermanence/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-impermanence-001.png"
 date: "2022-03-25"
 ---
 
-I like to draw people screaming alot...hmm I should self-evaluate.
+I like to draw people screaming a lot -- I should reevaluate.
