--- a/content/projects/pow/index.mdx
+++ b/content/projects/pow/index.mdx
@@ -7,4 +7,4 @@ cover: "./projects-pow-001.jpg"
 date: "2022-04-02"
 ---
 
-Accurate portryal of me when I step into a boxing ring.
+Accurate portrayal of me when I step into a boxing ring.
